--- a/projects/finding-donors/finding_donors.ipynb
+++ b/projects/finding-donors/finding_donors.ipynb
@@ -453,16 +453,101 @@
    "source": [
     "**Answer: **\n",
     "\n",
+    "**RandomForestClassifier** \n",
     "\n",
-    "| model                                                                  | real world application | strengths | weakness | reason for selection |\n",
-    "|------------------------------------------------------------------------|------------------------|-----------|----------|----------------------|\n",
-    "| Gaussian Naive Bayes (GaussianNB)                                      |                        |           |          |                      |\n",
-    "| Decision Trees                                                         |                        |           |          |                      |\n",
-    "| Ensemble Methods (Bagging, AdaBoost, Random Forest, Gradient Boosting) |                        |           |          |                      |\n",
-    "| K-Nearest Neighbors (KNeighbors)                                       |                        |           |          |                      |\n",
-    "| Stochastic Gradient Descent Classifier (SGDC)                          |                        |           |          |                      |\n",
-    "| Support Vector Machines (SVM)                                          |                        |           |          |                      |\n",
-    "| Logistic Regression                                                    |                        |           |          |                      |"
+    "Real World Application: \n",
+    "\n",
+    "\n",
+    "\n",
+    "Strengths: \n",
+    "\n",
+    "1. Parallelizable\n",
+    "2. Quick Prediction/Training Speed\n",
+    "3. Robust to Outliers and Non-linear Data\n",
+    "4. Low Bias, Moderate Variance\n",
+    "5. Handles Unbalanced Data\n",
+    "\n",
+    "Weakness: \n",
+    "\n",
+    "- Tendency overfitted\n",
+    "- lots of parameter to tune\n",
+    "- fairly complex to understand\n",
+    "\n",
+    "\n",
+    "Reason for selection: \n",
+    "\n",
+    "1. The data provided in this project is unbalance,handling unbalance data is one of then model strengths\n",
+    "2. It is non sensitive to outliers\n",
+    "\n",
+    "\n",
+    "**K-Nearest Neighbors (KNeighborsClassifier)**\n",
+    "\n",
+    "Real World Application: \n",
+    "\n",
+    "1. Customer segmentation \n",
+    "2. Clustering\n",
+    "\n",
+    "\n",
+    "Strengths: \n",
+    "\n",
+    "1. No Training time,it is an instance based classifier)\n",
+    "2. New data can be added without training\n",
+    "3. Easy to implement\n",
+    "\n",
+    "\n",
+    "\n",
+    "Weakness: \n",
+    "\n",
+    "1. Need feature scaling \n",
+    "2. Sensitive to noisy data\n",
+    "3. Sensitive to missing values and outliers\n",
+    "\n",
+    "\n",
+    "Reason for selection: \n",
+    "\n",
+    "1. Easy or Implement\n",
+    "2. Fast training time. \n",
+    "3. New Data can be added seamlessly\n",
+    "4. Interpretable\n",
+    "\n",
+    "\n",
+    "**Logistic Regression**  \n",
+    "\n",
+    "Real World Application: \n",
+    "\n",
+    "1. Customer segmentation \n",
+    "2. Clustering\n",
+    "\n",
+    "\n",
+    "Strengths: \n",
+    "\n",
+    "1. Can be extended to multiple classes\n",
+    "2. Very efficient to train\n",
+    "3. Does assume features distributions\n",
+    "\n",
+    "\n",
+    "\n",
+    "Weakness: \n",
+    "\n",
+    "1. Need feature scaling \n",
+    "2. Sensitive to noisy data\n",
+    "3. Sensitive to missing values and outliers\n",
+    "\n",
+    "\n",
+    "Reason for selection: \n",
+    "\n",
+    "1. Easy or Implement\n",
+    "2. Fast training time. \n",
+    "3. New Data can be added seamlessly\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -685,9 +770,9 @@
     "\n",
     "| model                            | f_beta_score | prediction time(secs) | training time(secs) | algorithm suitability |\n",
     "|----------------------------------|--------------|-----------------------|---------------------|-----------------------|\n",
-    "| Logistic Regression              | 0.6829       | 0.0079145             | 0.6858              |                       |\n",
-    "| K-Nearest Neighbors (KNeighbors) | 0.6374       | 18.478                | 0.0059              |                       |\n",
-    "| RandomForestClassifier           | 0.6794       | 0.775                 | 2.9179              |                       |\n",
+    "| Logistic Regression              | 0.6829       | 0.0079145             | 0.6858              |    Suitable           |\n",
+    "| K-Nearest Neighbors (KNeighbors) | 0.6374       | 18.478                | 0.0059              |    Not suitable       |\n",
+    "| RandomForestClassifier           | 0.6794       | 0.775                 | 2.9179              |    Very suitable      |\n",
     "\n",
     "\n",
     "I believe that at this stage we do not have enough information to select the most appropriate modle for the task. This is based on the following: \n",
@@ -725,17 +810,25 @@
     "\n",
     "How is the model trained? \n",
     "\n",
+    "The model is trained by performing the following steps:\n",
+    "1. Split the data in two parts, called training and testing. 80% of the data is used for training,\n",
+    "   while 20% was used for testing. \n",
+    "2. 3 candidate models were selected, the best model was choosen based on its ability to correctly identify   \n",
+    "   persons that earns 50K ++. To ensure that the model does this, the f_beta_score was used\n",
+    "3. The model that perform the best was selected from the 3 candidate models. \n",
+    "4. The selected model was fine tuned to improve its performance.     \n",
+    "\n",
     "\n",
     "How does the model makes predictions? \n",
     "\n",
-    " The model works by creating multiple models. Each model then makes a prediction for the donor salary. \n",
-    "T4b hese predictions are then combined to yield a single consenus prediction. For example if we have 10 predicters and 4 predicts \n",
+    "The model works by creating multiple models. Each model then makes a prediction for the donor salary. \n",
+    "These predictions are then combined to yield a single consenus prediction. For example if we have 10 predicters and 4 predicts \n",
     "that salary is above 50K and  6 says otherwise, then the RandomForestClassifier will conclude that the person salary is below 50k[1]. The image[2] below illustrates this concept.\n",
     "\n",
     "\n",
     "<img src=\"gral_rr_0807.png\"\n",
     "     alt=\"Markdown Monster icon\"\n",
-    "     style=\"margin-right: 10px;width:800px;height:300px;\" />\n",
+    "     style=\"margin-right: 10px;width:600px;height:300px;\" />\n",
     "\n",
     "\n",
     "\n",
